--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -212,38 +212,30 @@
   <!-- End Content -->
   <section class="container-fluid">
     <div class="row  justify-content-center pb-0">
-  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/aboutus.jpg" class="img-fluid" alt=""></div>
+  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/about-us5.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
     <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cómo hago mi pedido?</h3>
-    <p>Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.</p>
-    <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
+    <p>1. Podes realizar tu pedido por medio de la compra vía whatsapp. La cuál consiste en compartir el carrito que deseas comprar a nuestro número de teléfono y nosotros te enviamos nuestra cuenta bancaria y coordinamos el envío con base a tu domicilio.</p>
+    <p>2. Podes realizar tu compra por medio de Paypal.</p>
+    <p>Próximamente podrás realizar tus compras con tus tarjetas de credito o debito favoritas.</p>
   </div>
 </div>
     </div>
     <div class="row  justify-content-center pb-0">
-      <div class="col-lg-5 justify-content-center p-0 order-1 order-sm-2"><img class="img-fluid" src="gfpimg/about-us2.jpg" alt=""></div>
+      <div class="col-lg-5 justify-content-center p-0 order-1 order-sm-2"><img class="img-fluid" src="gfpimg/about-us6.jpg" alt=""></div>
       <div class="col-lg-5 text-center justify-content-center order-2 order-sm-1 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cuánto demora en llegar mi pedido?</h3>
-        <p>Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
-        <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
+        <p>Podes realizar tu pedido cualquier día de la semana, teniendo en cuenta que lunes cerramos pedidos y entregamos miércoles y jueves de la misma semana de acuerdo a tu ubicación en el GAM. Recuerda que nuestros productos se hacen frescos todas las semanas debido a que no continenen preservantes, por esta razón, tenemos un plan de producción semanal.</p>
       </div>
     </div>
     <div class="row  justify-content-center pb-0">
-      <div class="col-lg-5 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us3.jpg" alt=""></div>
+      <div class="col-lg-5 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us7.jpg" alt=""></div>
       <div class="col-lg-5 text-center justify-content-center order-2 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Hacen envíos en todo Costa Rica?</h3>
-        <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes o trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
-        <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
+        <p>Podemos enviarte nuestros snacks a cualquier parte del país en donde estés por medio de correos de Costa Rica. El costo es de ₡2500.
+          Si te encuentras dentro del GAM, también te hacemos llegar nuestros productos hasta la puerta de tu casa. El costo es de ₡2000.</p>
       </div>
     </div>
-    <div class="row  justify-content-center pb-0">
-        <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-2"><img class="img-fluid" src="gfpimg/about-us3.jpg" alt=""></div>
-        <div class="col-lg-5 mb-4 text-center justify-content-center order-1 p-3 pnuestra">
-          <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cuáles son sus puntos de venta?</h3>
-          <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes o trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
-          <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
-        </div>
-      </div>
         </div>
   </section>
   <!-- <section class="container-fluid px-0 nh">
@@ -330,7 +322,7 @@
           <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
-      <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span>
+      <!-- <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span> -->
   </nav>
   <!-- End Footer -->
   <!-- End Container -->
