--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <div class="collapse navbar-collapse" id="navbarNavFooter">
         <div class="navbar-nav footer">
           <div itemscope itemtype="https://gofoodpro.com">
-          <a class="nav-item nav-link active" itemprop="telephone" href="tel:+50688906767"><i class="fa fa-phone-alt"></i>  +506 8890-6767</a>
+          <a class="nav-item nav-link active" itemprop="telephone" href="tel:+50688906767"><i class="fa fa-phone-alt"></i>  +506 8827-3627</a>
         </div>
         <a class="nav-item nav-link active" href="mailto: info@gofoodpro.com"> <i class="fa fa-envelope"></i>  info@gofoodpro.com</a>
           <a class="nav-item nav-link active"> <i class="fa fa-briefcase"></i>  San Jose, Costa Rica</a>
@@ -255,7 +255,7 @@
           <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
-      <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span>
+      <!-- <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span> -->
   </nav>
   <!-- End Footer -->
   <!-- End Container -->
