--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -111,14 +111,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown active">
+          <!-- <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Productos
             </a>
             <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             </div>
-          </li>
+          </li> -->
           <li class="nav-item active">
             <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
           </li>
@@ -322,7 +322,7 @@
           <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram"></i></a>
         </div>
       </div>
-      <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span>
+      <!-- <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span> -->
   </nav>
   <!-- End Footer -->
   <!-- End Container -->
