--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -109,16 +109,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav d-flex justify-content-center">
           <li class="nav-item active">
-            <a class="nav-link" href="gofoodpro.com">Tienda <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown active">
+          <!-- <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Productos
             </a>
             <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             </div>
-          </li>
+          </li> -->
           <li class="nav-item active">
             <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
           </li>
