fix cart and add new links in external pages

--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -111,14 +111,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Tienda <span class="sr-only">(current)</span></a>
           </li>
-          <!-- <li class="nav-item dropdown active">
+          <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Productos
             </a>
             <div id="categories-menu" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             </div>
-          </li> -->
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="nuestra-historia">Nuestra Historia</a>
           </li>
