--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="carousel-item active mb-3">
         <img src="gfpimg/bg-xl-gfp-5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4">
-          <h1 class="display-4"> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
+          <h1 id="display-img-h1" class="display-4 "> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
           <p class="carouselp">100% costarricense</p>
@@ -164,7 +164,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-4.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-sm-block text-right my-4">
+        <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
@@ -175,7 +175,7 @@
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-2.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4">
-          <h1 class="display-4"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
+          <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
           <p class="carouselp">100% costarricense</p>
