--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -137,7 +137,7 @@
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
-  <div class="jumbotron text-right">
+  <div class="jumbotron nh text-right">
     <h1 class="display-4 m-4">Nuestra Historia</h1>
   </div>
   <!-- End Jumbotron -->
@@ -229,7 +229,7 @@
       </div>
     </div>
     <div class="row  justify-content-center pb-0">
-      <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us3.jpg" alt=""></div>
+      <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us8.jpg" alt=""></div>
       <div class="col-lg-5 mb-4 text-center justify-content-center order-2  p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
         <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes o trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
