--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
           <p class="carouselp">100% costarricense</p>
-          <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
+          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
       <div class="carousel-item mb-3">
@@ -169,7 +169,7 @@
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
           <p class="carouselp">100% costarricense</p>
-          <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
+          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
       <div class="carousel-item mb-3">
@@ -179,7 +179,7 @@
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4">
           <p class="carouselp">100% costarricense</p>
-          <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
+          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
     </div>
