--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
         </div>
         <a class="nav-item nav-link active" href="mailto: info@gofoodpro.com"> <i class="fa fa-envelope"></i>  info@gofoodpro.com</a>
           <a class="nav-item nav-link active"> <i class="fa fa-briefcase"></i>  San Jose, Costa Rica</a>
-          <a class="nav-item nav-link active" href="https://www.facebook.com/GoFoodPr0/"><i class="fa fa-facebook"></i></a>
-          <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/"><i class="fa fa-instagram"></i></a>
+          <a class="nav-item nav-link active" href="https://www.facebook.com/GoFoodPr0/">@GoFoodPro<i class="fa fa-facebook"></i></a>
+          <a class="nav-item nav-link active" href="https://www.instagram.com/gofoodpro/">@GoFoodPro<i class="fa fa-instagram"></i></a>
         </div>
       </div>
       <!-- <span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=Jvtj1OngwOvemQYykW3kgkspgUprcvgQTngpJIi1IXixINyG3LLpLk88UQbm"></script></span> -->
