--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -215,9 +215,9 @@
   <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/about-us5.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
     <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cómo hago mi pedido?</h3>
-    <p>1. Podes realizar tu pedido por medio de la compra vía whatsapp. La cuál consiste en compartir el carrito que deseas comprar a nuestro número de teléfono y nosotros te enviamos nuestra cuenta bancaria y coordinamos el envío con base a tu domicilio.</p>
-    <p>2. Podes realizar tu compra por medio de Paypal.</p>
-    <p>Próximamente podrás realizar tus compras con tus tarjetas de credito o debito favoritas.</p>
+    <p>1. Podés realizar tu pedido por medio de whatsapp. La cuál consiste en compartir el carrito que deseas comprar a nuestro número de teléfono y nosotros te enviamos nuestra cuenta bancaria y coordinamos el envío.</p>
+    <p>2. Podés realizar tu compra por medio de Paypal.</p>
+    <p>Próximamente podrás realizar tus compras con tus tarjetas de credito o debito.</p>
   </div>
 </div>
     </div>
