--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -234,7 +234,7 @@
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
         <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes hasta trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
         <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
-      </div>Nuestro
+      </div>
     </div>
         </div>
   </section>
