--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -137,7 +137,7 @@
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
-  <div class="jumbotron nh text-right">
+  <div class="jumbotron nuestra-historia text-right">
     <h1 class="display-4 m-4">Nuestra Historia</h1>
   </div>
   <!-- End Jumbotron -->
