--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -137,7 +137,7 @@
   </nav>
   <!-- END Nav BAR -->
   <!-- Start  Jumbotron -->
-  <div class="jumbotron text-right">
+  <div class="jumbotron preguntas text-right">
     <h1 class="display-4 m-4">F.A.Q</h1>
   </div>
   <!-- End Jumbotron -->
