--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active mb-3">
-        <img src="gfpimg/bg-xl-gfp-5.jpg" class="d-block w-100" alt="...">
+        <img src="gfpimg/bg-xl-gfp-5.jpg" class="d-block w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4">
           <h1 id="display-img-h1" class="display-4 "> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
@@ -163,7 +163,7 @@
         </div>
       </div>
       <div class="carousel-item mb-3">
-        <img src="gfpimg\bg-xl-gfp-4.jpg" class="d-block w-100" alt="...">
+        <img src="gfpimg\bg-xl-gfp-4.jpg" class="d-block w-100 img-carousel-2" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="carousel-item mb-3">
-        <img src="gfpimg\bg-xl-gfp-2.jpg" class="d-block w-100" alt="...">
+        <img src="gfpimg\bg-xl-gfp-2.jpg" class="d-block w-100 img-carousel-3" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4">
           <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
