styles, scroll and images

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="carousel-caption d-sm-block text-right my-4">
           <h1 id="display-img-h1" class="display-4 "> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
-          <hr class="my-4">
+          <hr class="my-4" id="lane-separator">
           <p class="carouselp">100% costarricense</p>
           <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
         </div>
@@ -167,7 +167,7 @@
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
-          <hr class="my-4">
+          <hr class="my-4" id="lane-separator">
           <p class="carouselp">100% costarricense</p>
           <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
         </div>
@@ -177,7 +177,7 @@
         <div class="carousel-caption d-sm-block text-right my-4">
           <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
-          <hr class="my-4">
+          <hr class="my-4" id="lane-separator">
           <p class="carouselp">100% costarricense</p>
           <a class="btn btn-success btn-lg" href="mantequillas" role="button">Comprar</a>
         </div>
@@ -271,6 +271,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
   <!-- custom scripts -->
   <script type="text/javascript" src="list.js"></script>
   <script type="text/javascript" src="gdp.js"></script>
