--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -212,7 +212,7 @@
   <!-- End Content -->
   <section class="container-fluid">
     <div class="row  justify-content-center pb-0">
-  <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/about-us5.jpg" class="img-fluid" alt=""></div>
+  <div class="col-lg-5 justify-content-center d-none d-lg-block p-0"><img src="gfpimg/about-us5.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
     <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cómo hago mi pedido?</h3>
     <p>1. Podés realizar tu pedido por medio de whatsapp. La cuál consiste en compartir el carrito que deseas comprar a nuestro número de teléfono y nosotros te enviamos nuestra cuenta bancaria y coordinamos el envío.</p>
