--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -210,7 +210,7 @@
   </div> -->
 </section>
   <!-- End Content -->
-  <section class="container-fluid">
+  <section class="container-fluid pfp">
     <div class="row  justify-content-center pb-0">
   <div class="col-lg-5 justify-content-center d-none d-lg-block p-0"><img src="gfpimg/about-us5.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
@@ -222,8 +222,8 @@
 </div>
     </div>
     <div class="row  justify-content-center pb-0">
-      <div class="col-lg-5 justify-content-center p-0 order-1 order-sm-2"><img class="img-fluid" src="gfpimg/about-us6.jpg" alt=""></div>
-      <div class="col-lg-5 text-center justify-content-center order-2 order-sm-1 p-3 pnuestra">
+      <div class="col-lg-5 justify-content-center p-0 order-1 order-lg-2"><img class="img-fluid" src="gfpimg/about-us6.jpg" alt=""></div>
+      <div class="col-lg-5 text-center justify-content-center order-2 order-lg-1 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cuánto demora en llegar mi pedido?</h3>
         <p>Podes realizar tu pedido cualquier día de la semana, teniendo en cuenta que lunes cerramos pedidos y entregamos miércoles y jueves de la misma semana de acuerdo a tu ubicación en el GAM. Recuerda que nuestros productos se hacen frescos todas las semanas debido a que no continenen preservantes, por esta razón, tenemos un plan de producción semanal.</p>
       </div>
