--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -125,13 +125,15 @@
           <li class="nav-item active">
             <a class="nav-link" href="preguntas-frecuentes">Preguntas Frecuentes</a>
           </li>
+          <li class="cart">
+            <a href="#" data-toggle="modal" data-target="#exampleModal">
+              <i class="fas fa-shopping-cart"></i>
+            </a><span id='numberCart' class="numbercartmb">0</span>
+          </li>
         </ul>
+        
       </div>
-      <li class="cart">
-        <a href="#" data-toggle="modal" data-target="#exampleModal">
-          <i class="fas fa-shopping-cart"></i>
-        </a><span id='numberCart' class="numbercartmb">0</span>
-      </li>
+     
     </div>
   </div>
   </nav>
@@ -215,16 +217,16 @@
   <div class="col-lg-5 justify-content-center p-0"><img src="gfpimg/aboutus.jpg" class="img-fluid" alt=""></div>
   <div class="col-lg-5 text-center justify-content-center p-3 pnuestra">
     <img src="gfpimg/icon.png" class="jumboiconp" alt="">
-    <p>Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.</p>
+    <p class="p-history">Go Food Pro nació a través de mi experiencia personal con la alimentación y mi vida laboral. Como ingeniera en alimentos, es un reto conservar un alimento sin tener que sacrificar su verdadera calidad. Personalmente siempre me ha gustado la hora del café y nunca encontraba ´´mi merienda ideal´´ alimentos que no tuvieran preservantes o azúcar añadida, por esta razón comencé a buscar materias primas nacionales que fueran de calidad y con las que las personas se relacionaran ya que, como buenos ticos, somos muy tradicionalistas y nos gusta lo conocido.</p>
     <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
   </div>
 </div>
     </div>
-    <div class="row  justify-content-center pb-0">
+    <div class="row justify-content-center pb-0">
       <div class="col-lg-5 justify-content-center p-0 order-1 order-lg-2"><img class="img-fluid" src="gfpimg/about-us2.jpg" alt=""></div>
       <div class="col-lg-5 text-center justify-content-center order-2 order-lg-1 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
-        <p>Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
+        <p class="p-history">Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
         <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
       </div>
     </div>
@@ -232,7 +234,7 @@
       <div class="col-lg-5 mb-md-4 justify-content-center p-0 order-1"><img class="img-fluid" src="gfpimg/about-us8.jpg" alt=""></div>
       <div class="col-lg-5 mb-4 text-center justify-content-center order-2  p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
-        <p>Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes hasta trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
+        <p class="p-history">Nuestros productos van dirigidos a todo tipo de consumidores, desde personas con alguna necesidad o condición alimentaria como alérgicos al huevo o a los lácteos, diabéticos que no pueden encontrar productos sin azúcar para ellos en el supermercado, madres que están en periodo de lactancia y no pueden consumir ciertos alimentos, niños que quieran meriendas con ingredientes reales y sin preservantes hasta trabajadores de oficina que quieran algún alimento para consumir en su jornada laboral que le de energía y no le cause molestias en el estómago y lo haga sentir bien para seguir con su trabajo.</p>
         <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
       </div>
     </div>
