--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@
           <li class="nav-item active">
             <a class="nav-link" href="preguntas-frecuentes">Preguntas Frecuentes</a>
           </li>
+          <li class="cart">
+            <a href="#" data-toggle="modal" data-target="#exampleModal">
+              <i class="fas fa-shopping-cart"></i>
+            </a><span id='numberCart' class="numbercartmb">0</span>
+          </li>
         </ul>
       </div>
-      <li class="cart">
-        <a href="#" data-toggle="modal" data-target="#exampleModal">
-          <i class="fas fa-shopping-cart"></i>
-        </a><span id='numberCart' class="numbercartmb">0</span>
-      </li>
+      
     </div>
   </div>
   </nav>
@@ -154,7 +155,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active mb-3">
         <img src="gfpimg/bg-xl-gfp-5.jpg" class="d-block w-100 img-carousel-1" alt="...">
-        <div class="carousel-caption d-sm-block text-right my-4">
+        <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 "> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4" id="lane-separator">
@@ -174,7 +175,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-2.jpg" class="d-block w-100 img-carousel-3" alt="...">
-        <div class="carousel-caption d-sm-block text-right my-4">
+        <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
           <hr class="my-4" id="lane-separator">
