--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-4.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-2" alt="...">
-        <img src="gfpimg/bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
@@ -177,7 +177,7 @@
       </div>
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-2.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-3" alt="...">
-        <img src="gfpimg/bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\bg-md-gfp-3.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
           <p class="lead">Ingenio en snacks nutritivos</p>
