--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <li id="cart-mobile" class="cart">
         <a href="#" data-toggle="modal" data-target="#exampleModal">
           <i class="fas fa-shopping-cart"></i>
-        </a><span id='numberCart' class="numbercartmb">0</span>
+        </a><span id='numberCartMobile' class="numbercartmb">0</span>
       </li>
     </div>
   </div>
