--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -133,7 +133,11 @@
         </ul>
         
       </div>
-     
+      <li id="cart-mobile" class="cart">
+        <a href="#" data-toggle="modal" data-target="#exampleModal">
+          <i class="fas fa-shopping-cart"></i>
+        </a><span id='numberCartMobile' class="numbercartmb">0</span>
+      </li>
     </div>
   </div>
   </nav>
