--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -132,7 +132,11 @@
           </li>
         </ul>
       </div>
-     
+      <li id="cart-mobile" class="cart">
+        <a href="#" data-toggle="modal" data-target="#exampleModal">
+          <i class="fas fa-shopping-cart"></i>
+        </a><span id='numberCartMobile' class="numbercartmb">0</span>
+      </li>
     </div>
   </div>
   </nav>
