--- a/nuestra-historia.html
+++ b/nuestra-historia.html
@@ -230,7 +230,7 @@
       <div class="col-lg-5 justify-content-center p-0 order-1 order-lg-2"><img class="img-fluid" src="gfpimg/about-us2.jpg" alt=""></div>
       <div class="col-lg-5 text-center justify-content-center order-2 order-lg-1 p-3 pnuestra">
         <img src="gfpimg/icon.png" class="jumboiconp" alt="">
-        <p class="p-history">Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con azúcar con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
+        <p class="p-history">Comencé a generar recetas tradicionales, pero con un valor agregado, haciéndolas deliciosas, pero utilizando ingredientes reales. Entre ellos muffins de banano con zanahoria sin azúcar (consumido, por diabéticos), donas de camote y chocolate al 70% que a los deportistas y a los niños les encantan, pan de semillas mixtas con fibra para ayudar al sistema digestivo, galletas con endulzantes de bajo en índice glicémico y con cacao 100% para dar satisfacción sin tener picos de azúcar en sangre, mantequilla de maní con sabor a leche condensada, pero SIN azúcar y SIN lácteos ¡Una verdadera maravilla!</p>
         <footer class="blockquote-footer">Maria Fernanda Malavasi</footer>
       </div>
     </div>
