--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
         <img src="gfpimg\bg-xl-gfp-2.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-3" alt="...">
         <img src="gfpimg\bg-md-gfp-3.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
-          <h1 id="display-img-h1" class="display-4 display-img-h1"><img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
-          <p class="lead">Ingenio en snacks nutritivos</p>
+          <h1 id="display-img-h1" class="display-4 display-img-h1">Galletas de Almendra</h1>
+          <p class="lead">Hechas con nuestra deliciosa mantequilla de almendras<br> Un <b>snack</b> naturalmente delicioso con ingredientes de calidad </p>
           <hr class="my-4" id="lane-separator">
-          <p class="carouselp">100% costarricense</p>
-          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
+          <p class="carouselp"><b>Sin Lácteos, soya o avena y libre de preservantes</b></p>
+          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Probalas</a>
         </div>
       </div>
     </div>
