--- a/index.html
+++ b/index.html
@@ -161,10 +161,11 @@
         <img src="gfpimg/bg-xl-gfp-5.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-1" alt="...">
         <img src="gfpimg/bg-md-gfp-1.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
-          <h1 id="display-img-h1" class="display-4 "> <img src="gfpimg/icon.png" class="carouselicon" alt="">Go Food Pro</h1>
-          <p class="lead">Ingenio en snacks nutritivos</p>
+          <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
+          <h1 id="display-img-h1" class="display-4 "> Crunch bars</h1>
+          <p class="lead">Crocante sensación del arroz tostado e ingredientes naturales que aportan fibra, grasas saludables y energía.</p>
           <hr class="my-4" id="lane-separator">
-          <p class="carouselp">100% costarricense</p>
+          <p class="carouselp"><b>¡excelente y balanceada opción para tu merienda!</b></p>
           <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
@@ -172,10 +173,10 @@
         <img src="gfpimg\bg-xl-gfp-4.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-2" alt="...">
         <img src="gfpimg\bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
-          <h1 class="display-4 mb-4">Go Food Pro</h1>
-          <p class="lead">Ingenio en snacks nutritivos</p>
+          <h1 class="display-4 mb-4">Donas de camote</h1>
+          <p class="lead">Una innegable combinación del chocolate oscuro y la cremosa mantequilla de maní unidos a la suave textura del camote.</p>
           <hr class="my-4" id="lane-separator">
-          <p class="carouselp">100% costarricense</p>
+          <p class="carouselp"><b>¡Un brownie saludable!</b></p>
           <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
@@ -184,9 +185,9 @@
         <img src="gfpimg\bg-md-gfp-3.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1">Galletas de Almendra</h1>
-          <p class="lead">Hechas con nuestra deliciosa mantequilla de almendras<br> Un <b>snack</b> naturalmente delicioso con ingredientes de calidad </p>
+          <p class="lead">La perfecta unión entre crema de almendra tostada y nibs de cacao 100% orgánicos en una galleta que es suavecita por dentro y crocante por fuera.</p>
           <hr class="my-4" id="lane-separator">
-          <p class="carouselp"><b>Sin Lácteos, soya o avena y libre de preservantes</b></p>
+          <p class="carouselp"><b>¡Un snack delicioso libre de harinas refinadas!</b></p>
           <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Probalas</a>
         </div>
       </div>
