--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h1 id="display-img-h1" class="display-4 "> Crunch bars</h1>
           <p class="lead">Crocante sensación del arroz tostado e ingredientes naturales que aportan fibra, grasas saludables y energía.</p>
           <hr class="my-4" id="lane-separator">
-          <p class="carouselp"><b>¡excelente y balanceada opción para tu merienda!</b></p>
+          <p class="carouselp"><b>¡Excelente y balanceada opción para tu merienda!</b></p>
           <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
         </div>
       </div>
