--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       <div class="carousel-item active mb-3">
         <img src="gfpimg/bg-xl-gfp-5.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-1" alt="...">
         <img src="gfpimg/bg-md-gfp-1.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg/mobile-galletas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
           <h1 id="display-img-h1" class="display-4 "> Crunch bars</h1>
