--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="carousel-item active mb-3">
         <img src="gfpimg/bg-xl-gfp-5.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-1" alt="...">
         <img src="gfpimg/bg-md-gfp-1.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
-        <img src="gfpimg/mobile-galletas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg/mobile-crunchbars-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
           <h1 id="display-img-h1" class="display-4 "> Crunch bars</h1>
@@ -173,6 +173,7 @@
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-4.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-2" alt="...">
         <img src="gfpimg\bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\mobile-donas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
           <h1 class="display-4 mb-4">Donas de camote</h1>
           <p class="lead">Una innegable combinación del chocolate oscuro y la cremosa mantequilla de maní unidos a la suave textura del camote.</p>
@@ -184,6 +185,7 @@
       <div class="carousel-item mb-3">
         <img src="gfpimg\bg-xl-gfp-2.jpg" id="img-carrouse-web" class="d-block w-100 img-carousel-3" alt="...">
         <img src="gfpimg\bg-md-gfp-3.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
+        <img src="gfpimg\mobile-galletas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <h1 id="display-img-h1" class="display-4 display-img-h1">Galletas de Almendra</h1>
           <p class="lead">La perfecta unión entre crema de almendra tostada y nibs de cacao 100% orgánicos en una galleta que es suavecita por dentro y crocante por fuera.</p>
