--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
         <img src="gfpimg/mobile-crunchbars-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption d-sm-block text-right my-4 item-image">
           <!-- <img src="gfpimg/icon.png" class="carouselicon" alt=""> -->
-          <h1 id="display-img-h1" class="display-4 "> Crunch bars</h1>
+          <h1 id="display-img-h1" class="display-4 "> Crunch Bars</h1>
           <p class="lead">Crocante sensación del arroz tostado e ingredientes naturales que aportan fibra, grasas saludables y energía.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Excelente y balanceada opción para tu merienda!</b></p>
-          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
+          <a class="btn btn-success btn-lg" href="#crunchbars" role="button">Comprar</a>
         </div>
       </div>
       <div class="carousel-item mb-3">
@@ -175,11 +175,11 @@
         <img src="gfpimg\bg-md-gfp-2.jpg" id="img-carrouse-mobile" class="w-100 img-carousel-1" alt="...">
         <img src="gfpimg\mobile-donas-1.jpg" id="img-carrouse-mobile-2" class="w-100 img-carousel-1" alt="...">
         <div class="carousel-caption-2 carousel-caption d-sm-block text-right my-4">
-          <h1 class="display-4 mb-4">Donas de camote</h1>
+          <h1 class="display-4 mb-4">Donas de Camote</h1>
           <p class="lead">Una innegable combinación del chocolate oscuro y la cremosa mantequilla de maní unidos a la suave textura del camote.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Un brownie saludable!</b></p>
-          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Comprar</a>
+          <a class="btn btn-success btn-lg" href="#donas" role="button">Comprar</a>
         </div>
       </div>
       <div class="carousel-item mb-3">
@@ -191,7 +191,7 @@
           <p class="lead">La perfecta unión entre crema de almendra tostada y nibs de cacao 100% orgánicos en una galleta que es suavecita por dentro y crocante por fuera.</p>
           <hr class="my-4" id="lane-separator">
           <p class="carouselp"><b>¡Un snack delicioso libre de harinas refinadas!</b></p>
-          <a class="btn btn-success btn-lg" href="#mantequillas" role="button">Probalas</a>
+          <a class="btn btn-success btn-lg" href="#galletasdealmendra" role="button">Comprar</a>
         </div>
       </div>
     </div>
