--- a/carrito.html
+++ b/carrito.html
@@ -142,9 +142,9 @@
                 <form>
                     <p>Seleccione si requiere envío</p>
                     <input onchange="changeDevilery(this.value)" type="radio" id="si" name="select" value="GAM">
-                    <label for="si">Si - Dentro del GAM - Costo: 2000&#8353;</label><br>
+                    <label for="si">Si - Dentro del GAM - Costo: &#8353;2000</label><br>
                     <input onchange="changeDevilery(this.value)" type="radio" id="no" name="select" value="NOGAM">
-                    <label for="no">Si - Fuera del GAM - Costo: 2500&#8353;</label><br>
+                    <label for="no">Si - Fuera del GAM - Costo: &#8353;2500</label><br>
                     <input onchange="changeDevilery(this.value)" type="radio" id="no" name="select" value="no">
                     <label for="no">No</label><br>
                 </form>
