--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -222,6 +222,7 @@
     <img src="gfpimg/icon.png" class="jumboiconp" alt=""><h3 class="display-5">¿Cómo hago mi pedido?</h3>
     <p>1. Podés realizar tu pedido por medio de whatsapp. La cuál consiste en compartir el carrito que deseas comprar a nuestro número de teléfono y nosotros te enviamos nuestra cuenta bancaria y coordinamos el envío.</p>
     <p>2. Podés realizar tu compra por medio de Paypal.</p>
+    <P>3. Podés realizar tu pedido a través de nuestra página con tus tarjetas de débito o crédito.</P>
   </div>
 </div>
     </div>
